new URL(string) replaced with new URI(string).toURL(), as deprecated in java-20