@@ -1,6 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -15,14 +17,14 @@ import org.junit.jupiter.api.Test;
 
 public class ChanRipperTest extends RippersTest {
     @Test
-    public void testChanURLPasses() throws IOException {
+    public void testChanURLPasses() throws IOException, URISyntaxException {
         List<URL> passURLs = new ArrayList<>();
         // URLs that should work
-        passURLs.add(new URL("http://desuchan.net/v/res/7034.html"));
-        passURLs.add(new URL("https://boards.4chan.org/hr/thread/3015701"));
-        passURLs.add(new URL("https://boards.420chan.org/420/res/232066.php"));
-        passURLs.add(new URL("http://7chan.org/gif/res/25873.html"));
-        passURLs.add(new URL("https://rbt.asia/g/thread/70643087/")); //must work with TLDs with len of 4
+        passURLs.add(new URI("http://desuchan.net/v/res/7034.html").toURL());
+        passURLs.add(new URI("https://boards.4chan.org/hr/thread/3015701").toURL());
+        passURLs.add(new URI("https://boards.420chan.org/420/res/232066.php").toURL());
+        passURLs.add(new URI("http://7chan.org/gif/res/25873.html").toURL());
+        passURLs.add(new URI("https://rbt.asia/g/thread/70643087/").toURL()); //must work with TLDs with len of 4
         for (URL url : passURLs) {
             ChanRipper ripper = new ChanRipper(url);
             ripper.setup();
@@ -32,13 +34,13 @@ public class ChanRipperTest extends RippersTest {
         }
     }
     @Test
-    public void testChanStringParsing() throws IOException {
+    public void testChanStringParsing() throws IOException, URISyntaxException {
         List<String> site1 = Arrays.asList("site1.com");
         List<String> site1Cdns = Arrays.asList("cnd1.site1.com", "cdn2.site2.biz");
 
         List<String> site2 = Arrays.asList("site2.co.uk");
         List<String> site2Cdns = Arrays.asList("cdn.site2.co.uk");
-        ChanRipper ripper = new ChanRipper(new URL("http://desuchan.net/v/res/7034.html"));
+        ChanRipper ripper = new ChanRipper(new URI("http://desuchan.net/v/res/7034.html").toURL());
         List<ChanSite> chansFromConfig = ripper
                 .getChansFromConfig("site1.com[cnd1.site1.com|cdn2.site2.biz],site2.co.uk[cdn.site2.co.uk]");
         Assertions.assertEquals(chansFromConfig.get(0).getDomains(), site1);
@@ -48,22 +50,18 @@ public class ChanRipperTest extends RippersTest {
         Assertions.assertEquals(chansFromConfig.get(1).getCdns(), site2Cdns);
     }
     @Test
-    public void testChanRipper() throws IOException {
+    public void testChanRipper() throws IOException, URISyntaxException {
         List<URL> contentURLs = new ArrayList<>();
-        contentURLs.add(new URL(getRandomThreadDesuarchive()));
+        contentURLs.add(new URI(getRandomThreadDesuarchive()).toURL());
         for (URL url : contentURLs) {
             ChanRipper ripper = new ChanRipper(url);
             testChanRipper(ripper);
         }
     }
 
-    /**
-     *
-     * @return String returns a url to a active desuarchive.org tread as a string
-     */
-    public String getRandomThreadDesuarchive() {
+    public String getRandomThreadDesuarchive() throws URISyntaxException {
         try {
-            Document doc = Http.url(new URL("https://desuarchive.org/wsg/")).get();
+            Document doc = Http.url(new URI("https://desuarchive.org/wsg/").toURL()).get();
             return doc.select("div.post_data > a").first().attr("href");
         } catch (IOException e) {
             e.printStackTrace();
