@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.E621Ripper;
 import org.junit.jupiter.api.Assertions;
@@ -9,20 +10,20 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 public class E621RipperTest extends RippersTest {
-    public void testRip() throws IOException {
-        E621Ripper ripper = new E621Ripper(new URL("https://e621.net/posts?tags=beach"));
+    public void testRip() throws IOException, URISyntaxException {
+        E621Ripper ripper = new E621Ripper(new URI("https://e621.net/posts?tags=beach").toURL());
         testRipper(ripper);
     }
     @Test
     @Tag("flaky")
-    public void testFlashOrWebm() throws IOException {
-        E621Ripper ripper = new E621Ripper(new URL("https://e621.net/posts?page=4&tags=gif+rating%3As+3d"));
+    public void testFlashOrWebm() throws IOException, URISyntaxException {
+        E621Ripper ripper = new E621Ripper(new URI("https://e621.net/posts?page=4&tags=gif+rating%3As+3d").toURL());
         testRipper(ripper);
     }
     @Test
     @Tag("flaky")
-    public void testGetNextPage() throws IOException {
-        E621Ripper nextPageRipper = new E621Ripper(new URL("https://e621.net/posts?tags=cosmicminerals"));
+    public void testGetNextPage() throws IOException, URISyntaxException {
+        E621Ripper nextPageRipper = new E621Ripper(new URI("https://e621.net/posts?tags=cosmicminerals").toURL());
         try {
             nextPageRipper.getNextPage(nextPageRipper.getFirstPage());
             assert (true);
@@ -30,7 +31,7 @@ public class E621RipperTest extends RippersTest {
             throw e;
         }
 
-        E621Ripper noNextPageRipper = new E621Ripper(new URL("https://e621.net/post/index/1/cosmicminerals"));
+        E621Ripper noNextPageRipper = new E621Ripper(new URI("https://e621.net/post/index/1/cosmicminerals").toURL());
         try {
             noNextPageRipper.getNextPage(noNextPageRipper.getFirstPage());
         } catch (IOException e) {
@@ -39,20 +40,20 @@ public class E621RipperTest extends RippersTest {
     }
     @Test
     @Tag("flaky")
-    public void testOldRip() throws IOException {
-        E621Ripper ripper = new E621Ripper(new URL("https://e621.net/post/index/1/beach"));
+    public void testOldRip() throws IOException, URISyntaxException {
+        E621Ripper ripper = new E621Ripper(new URI("https://e621.net/post/index/1/beach").toURL());
         testRipper(ripper);
     }
     @Test
     @Tag("flaky")
-    public void testOldFlashOrWebm() throws IOException {
-        E621Ripper ripper = new E621Ripper(new URL("https://e621.net/post/index/1/gif"));
+    public void testOldFlashOrWebm() throws IOException, URISyntaxException {
+        E621Ripper ripper = new E621Ripper(new URI("https://e621.net/post/index/1/gif").toURL());
         testRipper(ripper);
     }
     @Test
     @Tag("flaky")
-    public void testOldGetNextPage() throws IOException {
-        E621Ripper nextPageRipper = new E621Ripper(new URL("https://e621.net/post/index/1/cosmicminerals"));
+    public void testOldGetNextPage() throws IOException, URISyntaxException {
+        E621Ripper nextPageRipper = new E621Ripper(new URI("https://e621.net/post/index/1/cosmicminerals").toURL());
         try {
             nextPageRipper.getNextPage(nextPageRipper.getFirstPage());
             assert (true);
@@ -60,7 +61,7 @@ public class E621RipperTest extends RippersTest {
             throw e;
         }
 
-        E621Ripper noNextPageRipper = new E621Ripper(new URL("https://e621.net/post/index/1/cosmicminerals"));
+        E621Ripper noNextPageRipper = new E621Ripper(new URI("https://e621.net/post/index/1/cosmicminerals").toURL());
         try {
             noNextPageRipper.getNextPage(noNextPageRipper.getFirstPage());
         } catch (IOException e) {
